<resources>
    <string name="app_name">WeatherApp</string>
    <string name="network_error">Network Error</string>
    <string name="welcome">Welcome!</string>
    <string name="you_can_now_take_a_favorite_photo_and_share_it_with_your_friends_on_social_networks_such_as_facebook_and_twitter">You can now take a favorite photo\n and share it with your friends\n on social networks such as\n facebook and twitter.</string>
    <string name="continue_word">Continue</string>
    <string name="e">E</string>
    <string name="n">N</string>
    <string name="w">W</string>
    <string name="s">S</string>
    <string name="ne">NE</string>
    <string name="nw">NW</string>
    <string name="se">SE</string>
    <string name="sw">SW</string>
    <string name="error_saving_weather_story">Error saving weather story</string>
    <string name="error_deleting_weather_story">Error deleting weather story</string>
    <string name="error_getting_saved_weather_stories">Error getting weather stories</string>
    <string name="share_with">Share with</string>
    <string name="no_stories_available_yet">No stories available yet!</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="save">Save</string>
    <string name="load_weather_details">Load weather details</string>
    <string name="save_to_your_stories">Save to your stories</string>
    <string name="permission_denied">Permission denied</string>
    <string name="weather_story_is_saved">Weather story is saved</string>
    <string name="weather_story_is_deleted">Weather story is deleted</string>
    <string name="saved_weather_stories">Saved Weather Stories</string>
    <string name="update_weather_data">Update weather data</string>
    <string name="delete">Delete</string>
    <string name="feels_like">Feels like:</string>


</resources>