<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weatherDetailsConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/pickedPhotoImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weatherDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_black_transparent_corner_bottom_16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/weatherIconImageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="16dp"
                android:scaleType="fitXY"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                tools:src="@drawable/ic_snow" />

            <TextView
                android:id="@+id/tempTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/font_bold"
                android:maxLines="2"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fontXXXXLarge"
                app:layout_constraintBottom_toTopOf="@+id/feelsLikeTextView"
                app:layout_constraintStart_toEndOf="@+id/weatherIconImageView"
                app:layout_constraintTop_toTopOf="@+id/weatherIconImageView"
                tools:text="10°C" />

            <TextView
                android:id="@+id/feelsLikeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/font_bold"
                android:text="@string/feels_like"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fontLarge"
                app:layout_constraintBottom_toTopOf="@+id/weatherDescTextView"
                app:layout_constraintStart_toEndOf="@+id/weatherIconImageView"
                app:layout_constraintTop_toBottomOf="@+id/tempTextView"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/maxMinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/font_bold"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fontMedium"
                app:layout_constraintBaseline_toBaselineOf="@+id/tempTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tempTextView"
                tools:text="20°/10°" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_weather_location"
                android:tint="@color/colorWhite"
                app:layout_constraintEnd_toStartOf="@+id/locationTextView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="4dp"
                android:fontFamily="@font/font_semi_bold"
                android:gravity="start"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fontXLarge"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                tools:text="Hourly forecast" />

            <TextView
                android:id="@+id/weatherDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/font_semi_bold"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fontLarge"
                app:layout_constraintBottom_toTopOf="@+id/updatedAtTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/weatherIconImageView"
                app:layout_constraintTop_toBottomOf="@+id/feelsLikeTextView"
                tools:text="Hourly forecast" />

            <TextView
                android:id="@+id/updatedAtTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/font_regular"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fontMedium"
                app:layout_constraintBottom_toBottomOf="@+id/weatherIconImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/weatherIconImageView"
                app:layout_constraintTop_toBottomOf="@+id/weatherDescTextView"
                tools:text="May 2, 2020 at 02:00" />


            <TextView
                android:id="@+id/windSpeedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/font_semi_bold"
                android:maxLines="1"
                android:text="@string/wind_speed"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fontVeryLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updatedAtTextView" />

            <TextView
                android:id="@+id/windSpeedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/font_regular"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fontLarge"
                app:layout_constraintBaseline_toBaselineOf="@+id/windSpeedLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/windSpeedLabel"
                tools:text="2.6m/s SW" />

            <TextView
                android:id="@+id/humidityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/font_semi_bold"
                android:maxLines="1"
                android:text="@string/humidity"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fontVeryLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/windSpeedLabel" />

            <TextView
                android:id="@+id/humidityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/font_regular"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fontLarge"
                app:layout_constraintBaseline_toBaselineOf="@+id/humidityLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/humidityLabel"
                tools:text="71%" />

            <TextView
                android:id="@+id/pressureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/font_semi_bold"
                android:maxLines="1"
                android:text="@string/pressure"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fontVeryLarge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidityLabel" />

            <TextView
                android:id="@+id/pressureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/font_regular"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fontLarge"
                app:layout_constraintBaseline_toBaselineOf="@+id/pressureLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/pressureLabel"
                tools:text="1010hPa" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/storyActionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loadWeatherDetailsButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorWhite"
            android:fontFamily="@font/font_semi_bold"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/load_weather_details"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="visible"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveDataToImageFloatingButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveDataToImageFloatingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_check"
            android:visibility="gone"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shareStoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_corner_top_16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/facebookShareImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/twitterShareImageView"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/twitterShareImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/facebookShareImageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_semi_bold"
            android:text="@string/share_with"
            android:textColor="@color/colorBlueDark"
            android:textSize="@dimen/fontLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/twitterShareImageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/deleteStatusImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_remove"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.40"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/font_semi_bold"
            android:text="@string/delete"
            android:textColor="@color/colorBlueDark"
            android:textSize="@dimen/fontLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteStatusImageView"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>